2014-08-12  Eduardo Lima Mitev  <elima@igalia.com>
        [GTK] Adds dependency on GnuTLS 3.0+ for the implementation of subtle crypto algorithms
        https://bugs.webkit.org/show_bug.cgi?id=133317

        GnuTLS is already an indirect dependency through libsoup -> glib-networking.

        Reviewed by Philippe Normand.

        No new tests since no new functionality has been added.

        * Source/cmake/OptionsGTK.cmake: Adds search for required GnuTLS package

2014-08-11  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r172393.
        https://bugs.webkit.org/show_bug.cgi?id=135796

        discussion needed about GnuTLS version bump on the bots
        (Requested by philn on #webkit).

        Reverted changeset:

        https://bugs.webkit.org/show_bug.cgi?id=133317
        http://trac.webkit.org/changeset/172393

2014-08-11  Eduardo Lima Mitev  <elima@igalia.com>
        [GTK] Adds dependency on GnuTLS 3.0+ for the implementation of subtle crypto algorithms
        https://bugs.webkit.org/show_bug.cgi?id=133317

        GnuTLS is already an indirect dependency through libsoup -> glib-networking.

        Reviewed by Philippe Normand.

        No new tests since no new functionality has been added.

        * Source/cmake/OptionsGTK.cmake: Adds search for required GnuTLS package

2014-08-11  Eduardo Lima Mitev  <elima@igalia.com>

        [GTK] Adds stubs for all subtle crypto algorithm implemntations
        https://bugs.webkit.org/show_bug.cgi?id=133316

        Reviewed by Philippe Normand.

        * Source/cmake/OptionsGTK.cmake: Add ENABLE_SUBTLE_CRYPTO option
        * Source/cmake/WebKitFeatures.cmake: Add ENABLE_SUBTLE_CRYPTO option
        * Source/cmakeconfig.h.cmake: Define ENABLE_SUBTLE_CRYPTO

2014-08-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.5.2 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.
