@@ -1,4 +1,13 @@
 2014-08-12  Eduardo Lima Mitev  <elima@igalia.com>
+
+        [GTK] Subtle-crypto feature off by default and add a new configure flag to enable it
+        https://bugs.webkit.org/show_bug.cgi?id=135798
+
+        Reviewed by Philippe Normand.
+
+        * Source/cmake/OptionsGTK.cmake: Makes SUBTLE_CRYPTO flag off by default.
+
+2014-08-12  Eduardo Lima Mitev  <elima@igalia.com>
         [GTK] Adds dependency on GnuTLS 3.0+ for the implementation of subtle crypto algorithms
         https://bugs.webkit.org/show_bug.cgi?id=133317
 
